--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ a{
     margin: 40px;
     width: auto;
     border-radius: 50%;
-    max-width: 200px;
+    width: 200px;
     height: 200px;
 }
 
