--- a/style.css
+++ b/style.css
@@ -100,6 +100,17 @@ a{
     float: left;
 }
 
+@media only screen and (max-width: 600px){
+    .photo{
+        display: inline-block;
+        margin: 40px;
+        width: auto;
+        border-radius: 50%;
+        width: 200px;
+        height: auto;  
+    }
+}
+
 
 /* GRID */
 .grid-wrapper{
