--- a/style.css
+++ b/style.css
@@ -36,12 +36,14 @@ body, html{
 
 /* NAV */
 .main-footer{
-    display: grid;
-    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     font-size: 0.7em;
     margin: 0;
-    grid-auto-columns: minmax(0, 1fr);
-    grid-auto-flow: column;
+    /* grid-auto-columns: minmax(0, 1fr); */
+    /* grid-auto-flow: column; */
+    /* grid-auto-rows: 1fr; */
 }
 
 .sticky{
@@ -64,6 +66,7 @@ body, html{
 li{
     padding: 20px;
     overflow: hidden;
+    min-width: 1fr;
 }
 
 a{
