--- a/style.css
+++ b/style.css
@@ -82,13 +82,14 @@ a{
     display: flex;
     /* align-items: center;
     justify-content: center; */
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     /* height: 50vh; */
     background-color: #444;
     overflow:hidden;
 }
 
 .container p{
+    margin: 0 15px;
     align-self: center;
     letter-spacing: 1.5px;
     line-height: 2.25rem;
@@ -105,12 +106,17 @@ a{
 
 @media only screen and (max-width: 600px){
     .photo{
-        display: inline-block;
-        margin: 40px;
-        width: auto;
+        width: 100px;
+        height: auto;
         border-radius: 50%;
-        width: 200px;
-        height: auto;  
+    }
+
+    .container p{
+        font-size: 1.25rem;
+        margin: 0 15px;
+        align-self: center;
+        letter-spacing: 1.5px;
+        line-height: 2.25rem;
     }
 }
 
