--- a/style.css
+++ b/style.css
@@ -124,9 +124,13 @@ a{
 /* GRID */
 .grid-wrapper{
     font-size: 1em;
-    display: grid;
+    /* display: grid;
     gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
+    gap: 10rem;
 }
 
 .box  img{
@@ -143,6 +147,7 @@ a{
     background-color: #444;
     padding: 20px 130px;
     margin: 20px;
+    width: 2.5rem;
 }
 
 footer{
