--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body, html{
 }
 
 .zone {
-    cursor:pointer;
     /*display:inline-block;*/
     color:#FFF;
     font-size:2em;
@@ -139,6 +138,7 @@ a{
 }
 
 .box{
+    cursor:pointer;
     display: flex;   
     text-align: center;
     flex-direction: column;
@@ -205,4 +205,8 @@ footer{
     background: -o-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
     background: -ms-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* IE10+ */
     background: linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
+}
+
+.github{
+    cursor:pointer;
 }
